Fix text wrap and buttons for mobile.

--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,7 @@ body {
   margin: 0 auto;
   padding: 0 1rem;
   max-width: 1280px;
+  word-break: break-word;
 }
 header {
   font-family: var(--font-sans);
@@ -38,7 +39,6 @@ header:hover a {
 }
 main {
   margin: 0 1rem;
-  word-break: break-word;
 }
 main a {
   word-break: break-all;
@@ -108,6 +108,7 @@ th {
     width: 100%;
     margin-bottom: 1rem;
     display: flex;
+    flex-flow: row wrap;
     gap: 0.5rem;
 }
 .search-form input[type="search"] {
@@ -126,7 +127,7 @@ th {
 }
 .recipe-snippet {
   color: var(--dark-gray);
-  white-space: pre;
+  white-space: pre-line;
   margin: 0.5rem 0 1rem 0;
 }
 .recipe-form {
